Archive2/d7/efcdd0aeff043c/output
main.cpp:10:5: error: static_assert failed ""
    static_assert(is_class<decltype(fp)>::value, "");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
